Fixed projects section alignment

--- a/css/style.css
+++ b/css/style.css
@@ -463,8 +463,8 @@ footer p {
 
 .project-img {
   border-radius: 2rem;
-  height: 500px;
-  width: 800px;
+  height: 250px;
+  width: 400px;
 }
 
 .project-title {
